# Vex

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/commands/: completions.rs  exec.rs  list.rs  mod.rs  remove.rs  rename.rs  save.rs
src/config/: mod.rs  storage.rs  types.rs  validation.rs
src/tests/: exec_tests.rs  mod.rs
src/utils/: io.rs  mod.rs  qemu.rs
