[package]
name = "vex"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"  # 用于获取用户目录
anyhow = "1.0" # 简化错误处理
regex = "1.10"
escargot = "0.5.15"
tempfile = "3.23.0"
